examples/bad/static_error_no_return.ps
int f() {
    int x = 0;
    int y = 3;
    println(x + y);
}